Added loop field

--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,27 @@ html, body {
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
 
+#code{
+  font-size: 1.5em;
+  height:2em;
+  width:200px;
+  margin:15px;
+}
+
+.commandButton{
+  position: relative;
+  margin-left: 10px;
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 30px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  font-size:1em;
+  line-height: 42px;
+  cursor: pointer;
+}
 body {
   margin: 80px 0; }
 
