changed to letter commands

--- a/style/main.css
+++ b/style/main.css
@@ -9,6 +9,7 @@ html, body {
 
 #code{
   font-size: 1.5em;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   height:2em;
   width:200px;
   margin:15px;
